[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontracker"
description = "A custom variant of 'carbontracker' for the Lancaster University Hex multicomputer- Track and predict the energy consumption and carbon footprint of training deep learning models."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Lasse F. Wolff Anthony", email = "lfwa@proton.me" },
    { name = "Benjamin Kanding" },
    { name = "John Vidler", email = "j.vidler@lancaster.ac.uk" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests", "numpy", "pandas", "geocoder", "pynvml", "psutil", "importlib-metadata"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/JohnVidler/carbontracker"
repository = "https://github.com/JohnVidler/carbontracker"

[tool.setuptools_scm]

[project.scripts]
carbontracker = "carbontracker.cli:main"

[tool.setuptools]
py-modules = []